2008-12-12  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Changed the default loading screen to a rect created from the theme's
	bg color. Also, remove it after the animation is complete.

	* data/Makefile.am: Removed the blank-window.png file.
	* src/launcher/hd-launcher.c (launcher_signals,
	  hd_launcher_constructed, _hd_launcher_transition_clicked,
	  hd_launcher_transition_app_start, hd_launcher_transition_new_frame,
	  hd_launcher_transition_completed):

2008-12-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/launcher/hd-launcher.c:
	  Don't exit launcher view to home view when clicking the backgound
	  where the title area would be.

2008-12-12  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Added X-Maemo-Prestarted=always to imageviewer as requested by the
	dev.

	* data/desktop/image-viewer.w50-desktop:

2008-12-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c:
	  Doubled the duration of the window fly effect because
	  it became invisibly fast.  Zooming is untouched.

2008-12-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Don't create threads interfering with gdb on sbox/x86
	if $HD_NOTHREADS is defined.

	* src/hildon-desktop.h:
	  hd_disable_threads() defined.
	* src/home/hd-home-view.c:
	* src/launcher/hd-launcher.c
	  Use.
	* src/home/hd-task-navigator.c:
	  Also don't crash if we can't play with canberra.

2008-12-12  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Correct hard-coded menu.

	* data/desktop/hildon-control-panel.w50-desktop:
	* data/desktop/maemoblocks.w50-desktop:
	* data/desktop/mediaplayer.w50-desktop:
	* data/desktop/osso_notes.w50-desktop:
	* data/desktop/osso_rss_feed_reader.w50-desktop:
	* data/desktop/osso_sketch.w50-desktop:
	* data/desktop/rhapsody.w50-desktop:

2008-12-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/hildon-desktop.postinst:
	* src/Makefile.am:
	* src/hildon-desktop-views.schemas: